[CSS]: fixed height overflow with slide 1: - use var for navbar height - subtract navbar height from slides-container height - made slide height 100%

--- a/app2/src/scss/_nav_bar_top.scss
+++ b/app2/src/scss/_nav_bar_top.scss
@@ -4,7 +4,7 @@ nav.main-nav {
   background-color: $gray;
   top: 0;
   width: 100%;
-  height: 60px;
+  height: $nav-main-height;
   z-index: 100;
 
   .logo {
